--- a/src/com/bank/ui/Inicio.form
+++ b/src/com/bank/ui/Inicio.form
@@ -134,7 +134,7 @@
     <Container class="javax.swing.JPanel" name="jPanel1">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="cc" green="cc" red="cc" type="rgb"/>
+          <Color blue="ec" green="ec" red="ea" type="rgb"/>
         </Property>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.EtchedBorderInfo">
@@ -146,14 +146,14 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Component id="jLabel5" alignment="0" pref="558" max="32767" attributes="0"/>
+              <Component id="jLabel5" alignment="0" max="32767" attributes="0"/>
               <Group type="102" attributes="0">
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="lb_nombreCliente" alignment="0" max="32767" attributes="0"/>
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="lb_tipoCuenta" max="32767" attributes="0"/>
+                              <Component id="lb_tipoCuenta" pref="546" max="32767" attributes="0"/>
                               <Component id="lb_SaldoCuenta" max="32767" attributes="0"/>
                           </Group>
                       </Group>
@@ -185,13 +185,13 @@
               <Font name="sansserif" size="14" style="0"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="0"/>
-            <Property name="text" type="java.lang.String" value="Fulanito x"/>
+            <Property name="text" type="java.lang.String" value="nombre"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="lb_tipoCuenta">
           <Properties>
             <Property name="horizontalAlignment" type="int" value="0"/>
-            <Property name="text" type="java.lang.String" value="cuenta corriente :"/>
+            <Property name="text" type="java.lang.String" value="cuenta corriente : numero de cuenta"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel5">
